# git-ai

./: .gitignore  Cargo.toml  README.md  git-message.json
docs/: NODE.md
src/: configuration.rs  git.rs  main.rs  secrets.rs
src/ai/: mod.rs  open_ai.rs
src/cli/: direct.rs  interactive.rs  mod.rs
src/providers/: jira.rs  mod.rs
src/vcs/: github.rs  mod.rs
