[package]
name = "git-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1" }
dialoguer = { version = "0.11.0", features = ["history"]}
futures = { version = "0.3.30" }
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
tokio = { version = "1.36.0", features = ["full"] }
