[package]
name = "git-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22.0" }
clap = { version = "4.5.1" }
convert_case = { version = "0.6.0" }
dialoguer = { version = "0.11.0" }
futures = { version = "0.3.30" }
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = { version = "0.26.2" }
tokio = { version = "1.36.0", features = ["full"] }
